--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <h1></h1>
     <div class="container-sm fondo">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 w-50">
                 
                     <input type="text" id="numero" class="form-control">
                   
             </div>
-            <div class="col-md-6 text-center">
-                <select class="form-select" id="option"  aria-label="Default select example">
+            <div class="col-md-6">
+                <select class="form-select  text-center" id="option"  aria-label="Default select example">
                     <option  value="km">KM</option>
                     <option  value="cm">CM</option>
                     <option  value="mm">MM</option>
@@ -32,10 +32,10 @@
                 <h2>EN</h2>
             </div>
             <div class="col-md-6">
-                <select class="form-select" id="select"  aria-label="Default select example">
+                <select class="form-select text-center" id="select"  aria-label="Default select example">
                     <option  value="Km">KM</option>
                     <option  value="Cm">CM</option>
-                    <option  value="Mm">MM</option>
+                    <option  value="Mm" selected>MM</option>
                     <option  value="Mts">MTS</option>
                   </select>
             </div>
@@ -45,7 +45,7 @@
                 <h2>ES</h2>
             </div>
             <div class="col-md-6">
-                <p id="cambiar">0</p>
+                <p class="fs-4" id="cambiar">0</p>
             </div>
         </div>
     </div>
