--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <option  value="km">KM</option>
                     <option  value="cm">CM</option>
                     <option  value="mm">MM</option>
-                    <option  value="mts">MTS</option>
+                    <option  value="mts" selected>MTS</option>
                   </select>
             </div>
         <div class="row">
@@ -34,8 +34,8 @@
             <div class="col-md-6">
                 <select class="form-select text-center" id="select"  aria-label="Default select example">
                     <option  value="Km">KM</option>
-                    <option  value="Cm">CM</option>
-                    <option  value="Mm" selected>MM</option>
+                    <option  value="Cm" selected>CM</option>
+                    <option  value="Mm" >MM</option>
                     <option  value="Mts">MTS</option>
                   </select>
             </div>
